fixing gold line x overflow

--- a/begoodPlus/static_cdn/assets/main/css/style.css
+++ b/begoodPlus/static_cdn/assets/main/css/style.css
@@ -49,6 +49,7 @@
 
 .waves-container {
   width: 100vw;
+  max-width: 100%;
   height: 221px;
   position: absolute;
   bottom: 0px;
